# lbfgsb_cpp_wrapper

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  l_bfgs_b.h  l_bfgs_b_example.cpp
Lbfgsb.3.0/: lbfgsb.f  setulb_wrapper.f
examples/: CMakeLists.txt  full_example.cpp  simple_example.cpp
include/: l_bfgs_b.h  problem.h
include/lbfgsb_cpp/: l_bfgs_b.h  problem.h  utils.h
simple_example/: CMakeLists.txt  simple_example.cpp
tests/: CMakeLists.txt
tests/src/: CMakeLists.txt  problem_fixture.h  random_vector_generator.h  test_functions.h  test_gtest.cpp  test_l_bfgs_b_optimization.cpp  test_numerical_gradient.cpp  test_problem.cpp  test_utils.h
